spec/lib/cli/log/errors/configurerUndefined.js
// Generated by CoffeeScript 2.4.1
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: 'returns `configurerUndefined` error message',
      i: [],
      e: "In order to omit configurer path please specify it at least once."
    });
  };

}).call(this);
